--- a/src/Common/src/Common.Utils/IO/Steeltoe.Common.IO.csproj
+++ b/src/Common/src/Common.Utils/IO/Steeltoe.Common.IO.csproj
@@ -2,6 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Description></Description>
+    <PackageTags></PackageTags>
   </PropertyGroup>
 
+  <Import Project="..\..\..\..\versions.props" />
+  <Import Project="..\..\..\..\sharedproject.props" />
 </Project>
