--- a/src/Common/src/Common.Utils/IO/Steeltoe.Common.IO.csproj
+++ b/src/Common/src/Common.Utils/IO/Steeltoe.Common.IO.csproj
@@ -1,8 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Description></Description>
+    <Description>Steeltoe common IO utility library</Description>
     <PackageTags></PackageTags>
   </PropertyGroup>
 
